public/stylesheets/style.css
footer{
  height: 36px;
}
.push{
  height: 54px;
}
.container-fluid{
  min-height: 85%;
  height: auto !important;
  height: 85%;
  margin: 50px auto -54px;
}
a {
  color: #00B7FF;
}
.form-stacked{
  padding-left: 0px;
}

.sidebar .clearfix label{
  text-align: center;
}

.form-stacked div.clearfix.error{
  padding-left: 5px;
}

.sidebar{
  /*position: fixed;*/
}
.sidebar .clearfix input{
  width: 170px;
}

/* FIx for input boxes breaking alignment with clearfix.error */
.form-stacked div.clearfix.error{
  padding-left: 10px;
}

.noBorder{
  border: none !important;
}

.left {
  float:left;
}

.hero-unit{
  background-color: transparent;
  margin-left: auto;
  margin-right: auto;
  width: 600px;
  padding-top: 10px;
  padding-bottom: 0;
}


.heroImage{
  width: 500px;
  margin-left: auto;
  margin-right: auto;
}
.modal-header{
  padding-bottom: 10px;
}

.modal.small{
  width: 250px;
  left: 50%;
  margin-left: -125px;
}

#createAccount_btn{
  margin-top: 10px;
}
.link{
  cursor: pointer;
  text-decoration: underline;
}
.navbar ul.nav{
  float: right;
}

header{
  margin-top: 40px;
}
header.largeHeader h1{
  font-size: 81px;
  line-height: 1;
}
header.largeHeader p{
  font-size: 30px;
  line-height: 36px;
  font-weight: 300;
  margin-top: 5px;
}
header .inner{
  text-align: center;
}
.footer {
  margin-top: 45px;
  padding: 35px 0 36px;
  border-top: 1px solid #e5e5e5;
}

.footer .links a{
  border-right: 1px solid #e5e5e5;
  margin-right: 5px;
  padding-right: 5px;
}

.footer .links a:first-child{
  border-left: 1px solid #e5e5e5;
  padding-left: 5px;
}

